[package]
name = "the-bobiverse"
version = "0.0.2"
authors = ["Albin Sjögren <albin@sjoegren.se>"]
edition = "2021"
description = "This is a game based on Dennis E Taylors Bobiverse books. Space exploration, resource management, colonizing, fun mini games and a world full of possibilities"
categories = ["games"]


[dependencies]
rodio = "0.14.0"
egui = "0.15.0"
eframe = "0.15.0"
serde = "1.0.130"
image = "0.23.14"
egui_winit_platform = { version = "0.11.0", git = "https://github.com/cwfitzgerald/egui_winit_platform.git", rev = "eaef13fd5d70bb5b3251424711012ceedb71994b" }
rend3 = { git = "https://github.com/BVE-Reborn/rend3"}
rend3-pbr = { git = "https://github.com/BVE-Reborn/rend3"}
rend3-egui = { git = "https://github.com/BVE-Reborn/rend3"}
winit = "0.25.0"
glam = "0.20.0"
pollster = "0.2.4"
env_logger = "0.9.0"
nom = "7.0.0"
rand = "0.8.4"
serde_json = "1.0.68"
serde_derive = "1.0.130"
ndarray = { version = "0.15", features = ["blas"]}
ndarray-glm = { version = "0.0.10", features = ["openblas-system"] }
input-actions = "0.1.0"

[package.metadata.bundle]
name = "The Bobiverse"
resources = ["src/data", "src/data/music/Bob_Frame-Rate.mp3"]
copyright = "Copyright (c) Albin Sjögren 2021. All rights reserved."
icon = ["src/data/images/GUPPI.png"]
short_description = "This is a game based on Dennis E Taylors Bobiverse books. Space exploration, resource management, colonizing, fun mini games and a world full of possibilities"
long_description = """
This is a game
"""

[package.metadata.appimage]
resources = ["src/data", "src/data/color/color.json"]