[package]
name = "project-heaven"
version = "0.0.2"
authors = ["Albin Sjögren <albin@sjoegren.se>"]
edition = "2021"
description = ""
categories = ["games"]


[dependencies]
spv-rs = "0.3.10"
# The egui immediate mode gui library
egui = "0.16.0"
# Backend-agnostic interface for writing apps using egui
epi = "0.16.0"
# Winit integration with egui
egui_winit_platform = "0.13.0"
# logging
env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty"] }
# Linear algebra library
glam = "0.20.0"
# Portable implementation of Instant.
instant = { version = "0.1", features = ["wasm-bindgen"] }
# Renderer core
rend3 = { version = "^0.2.0",path = "src/rend3-trunk/rend3" }
# Egui renderer integration
rend3-egui = { version = "^0.2.0",path = "src/rend3-trunk/rend3-egui" }
# Framework that deals with the event loop, setting up the renderer, and platform differences.
rend3-framework = { version = "^0.2.0", path = "src/rend3-trunk/rend3-framework" }
# Programmable render list that dictates how the scene renders
rend3-routine = { version = "^0.2.0",path = "src/rend3-trunk/rend3-routine" }
# Windowing
winit = "0.26"
gltf = { version = "1.0", default-features = false, features = ["import", "utils"] }
serde = "1.0.130"
image = "0.24.0"
pollster = "0.2.4"
nom = "7.0.0"
rand = "0.8.4"
serde_json = "1.0.68"
serde_derive = "1.0.130"
ndarray = { version = "0.15", features = ["blas"]}
ndarray-glm = { version = "0.0.10", features = ["openblas-system"] }
input-actions = "0.1.0"