[package]
name = "project-heaven"
version = "0.0.2"
authors = ["Albin Sjögren <albin@sjoegren.se>"]
edition = "2021"
description = ""
categories = ["games"]


[dependencies]
spv-rs = "0.6.1"
wgpu = "0.12"
egui_wgpu_backend = "0.16.0"
egui = "0.16.0"
epi = "0.16.0"
egui_winit_platform = "0.13.0"
env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty"] }
glam = "0.20.0"
instant = { version = "0.1", features = ["wasm-bindgen"] }
rend3 = "0.3.0"
rend3-egui = { version = "^0.3.0", path = "src/rend3-egui"}
rend3-framework = "0.3.0"
rend3-routine = "0.3.0"
winit = "0.26"
gltf = { version = "1.0", default-features = false, features = ["import", "utils"] }
serde = "1.0.130"
image = "0.24.0"
pollster = "0.2.4"
nom = "7.0.0"
rand = "0.8.4"
serde_json = "1.0.68"
serde_derive = "1.0.130"
ndarray = { version = "0.15", features = ["blas"]}
ndarray-glm = { version = "0.0.10", features = ["openblas-system"] }
input-actions = "0.1.0"